# Claude-Code-Usage-Monitor

./: .gitignore  Cargo.toml  README.md  build.rs  security_best_practices_report.md
.github/workflows/: release.yml
docs/: build-history-report.sample.yml
src/: codex_poller.rs  diagnose.rs  history.rs  localization.rs  main.rs  models.rs  poller.rs  pricing.rs  secret_store.rs  updater.rs  window.rs
src/localization/: english.rs  french.rs  german.rs  japanese.rs  mod.rs  russian.rs  spanish.rs
